--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,8 @@
 ---
+import PageContent from "../components/PageContent.astro";
+import PageFooter from "../components/PageFooter.astro";
+import PageFrame from "../components/PageFrame.astro";
+import PageHeader from "../components/PageHeader.astro";
 import "../styles/global.css";
 ---
 
@@ -12,6 +16,31 @@ import "../styles/global.css";
 		<title>Astro Basics</title>
 	</head>
 	<body>
-		<slot />
+		<PageFrame />
+		<PageHeader />
+		<PageContent>
+				<slot />
+		</PageContent>
+		<PageFooter />
+		<script>
+			const observer = new IntersectionObserver(
+				(entries) => {
+					entries.forEach((entry) => {
+						if (entry.isIntersecting) {
+							entry.target.classList.add("opacity-100");
+							entry.target.classList.remove("opacity-0");
+						} else {
+							entry.target.classList.add("opacity-0");
+							entry.target.classList.remove("opacity-100");
+						}
+					});
+				},
+				{ threshold: 0.6 } // frame is active if 60% visible
+			);
+
+			document.querySelectorAll("[data-frame]").forEach((el) =>
+				observer.observe(el)
+			);
+		</script>
 	</body>
 </html>
