updating layout and functionality

--- a/src/components/PageFooter.astro
+++ b/src/components/PageFooter.astro
@@ -2,7 +2,7 @@
 ---
 
 <footer>
-  <div class="fixed bottom-10 left-12 right-12 flex justify-between items-center py-0.5 px-3">
+  <div class="fixed bottom-11 left-11 right-11 flex justify-between items-center px-8 py-3.5">
     <div />
     <nav class="text-sm">
       <ul class="flex space-x-4">
