--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import LayoutFrame from '../layouts/LayoutFrame.astro';
 <Layout>
   <LayoutFrame>
 	<div class="flex items-center justify-center w-full h-full">
-		<span>This is the index page</span>
+		<span>This is the about page</span>
 	</div>
   </LayoutFrame>
 </Layout>
