--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -1,23 +1,15 @@
 ---
-import AnimatedLogo from './react/AnimatedLogo.tsx';
-import { ROUTES } from '../constants/routes.ts';
+import AnimatedLogo from './preact/AnimatedLogo.tsx';
+import Menu from './preact/Menu.tsx';
+import ThemeToggle from './preact/ThemeToggle';
 ---
 
-<header class="fixed top-10 left-12 right-12 flex justify-between items-center z-10">
+<header class="fixed top-11 left-11 right-11 h-14 px-2 pt-2 flex justify-between z-10">
   <div>
-    <AnimatedLogo client:only="preact" className="text-2xl" />
+    <AnimatedLogo client:only="preact" className="pl-2 text-base" />
   </div>
-  <div>
-    <nav class="pr-1">
-      <ul class="space-x-2 text-lg font-bold">
-        {Object.entries(ROUTES).map(([_, route]) => (
-          <li class="inline">
-            <a href={route.path()} class="hover:underline">
-              {route.label}
-            </a>
-          </li>
-        ))}
-      </ul>
-    </nav>
+  <div class="pr-2">
+    <Menu client:only="preact" />
+    <ThemeToggle client:only="preact" />
   </div>
 </header>
