--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,18 @@ import LayoutFrame from '../layouts/LayoutFrame.astro';
 
 <Layout>
   <LayoutFrame>
-	<div class="flex items-center justify-center w-full h-full">
-		<span>This is the index page</span>
-	</div>
+		<div class="flex items-center justify-center w-full h-full">
+			<span>This is the index page</span>
+		</div>
+  </LayoutFrame>
+	<LayoutFrame>
+		<div class="flex items-center justify-center w-full h-full">
+			<span>This is the index page</span>
+		</div>
+  </LayoutFrame>
+	<LayoutFrame>
+		<div class="flex items-center justify-center w-full h-full">
+			<span>This is the index page</span>
+		</div>
   </LayoutFrame>
 </Layout>
