--- a/src/components/page/PageFooter.astro
+++ b/src/components/page/PageFooter.astro
@@ -1,5 +1,5 @@
 ---
-import { fetchAllSocialNetworks } from "../lib/requests"
+import { fetchAllSocialNetworks } from "../../lib/requests"
 
 const socialNetworks = await fetchAllSocialNetworks();
 ---
