--- a/src/components/page/PageHeader.astro
+++ b/src/components/page/PageHeader.astro
@@ -1,7 +1,7 @@
 ---
-import AnimatedLogo from './preact/AnimatedLogo.tsx';
-import Menu from './preact/Menu.tsx';
-import ThemeToggle from './preact/ThemeToggle';
+import AnimatedLogo from '../preact/AnimatedLogo.tsx';
+import Menu from '../preact/Menu.tsx';
+import ThemeToggle from '../preact/ThemeToggle';
 ---
 
 <header class="fixed top-11 left-11 right-11 h-14 px-2 pt-2 flex justify-between z-10">
