--- a/src/components/blog/BlogPostCard.astro
+++ b/src/components/blog/BlogPostCard.astro
@@ -32,7 +32,7 @@ function formattedDate() {
 }
 ---
 
-<div class:list={["block", className]}>
+<div class:list={["flex flex-col gap-0.5", className]}>
   <div>
     <p class="text-gruvbox-bg4 text-[12px] p-1 select-none">{formattedDate()}</p>
   </div>
@@ -49,7 +49,7 @@ function formattedDate() {
         size="small"
       />
       <div class="p-4 space-y-3">
-        <div class="h-5">
+        <div class="min-h-5">
           <h2 class="text-xl font-gnuolane uppercase tracking-wide font-bold text-gruvbox-fg0">{title}</h2>
         </div>
         <div>
