--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -2,39 +2,18 @@
 import Layout from "../../layouts/Layout.astro";
 import LayoutFrame from "../../layouts/LayoutFrame.astro";
 import BlogPostCard from "../../components/blog/BlogPostCard.astro";
-import { fetchBlogPostsPaginated, fetchAllTagsPaginated } from "../../lib/requests";
-import TagFilter from "../../components/preact/TagFilter";
+import { fetchBlogPostsPaginated } from "../../lib/requests";
+import BlogFilters from "../../components/blog/BlogFilters.astro";
 
 const blogPosts = await fetchBlogPostsPaginated({});
-const tags = await fetchAllTagsPaginated();
 ---
 
 <Layout>
   <LayoutFrame>
-    <div class="flex flex-col h-full w-full">
-      <div class="grid grid-cols-3 gap-x-10 min-h-48 px-1 pb-10">
-        <div class="space-y-1">
-          <h3 class="font-gnuolane uppercase text-lg tracking-wider">Post Types</h3>
-          <div class="space-y-1">
-            <div>
-              <input type="checkbox" id="projects" name="projects" value="projects" checked disabled />
-              <label for="projects" class="ml-2 text-gruvbox-fg2">Projects</label>
-            </div>
-            <div>
-              <input type="checkbox" id="blog-posts" name="blog-posts" value="blog-posts" checked disabled />
-              <label for="blog-posts" class="ml-2 text-gruvbox-fg2">Blog Posts</label>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col gap-2 col-span-2">
-          <div>
-            <h3 class="font-gnuolane uppercase text-lg tracking-wider">Tags</h3>
-          </div>
-          <TagFilter tags={tags} client:only="preact" />
-        </div>
-      </div>
+    <div class="flex flex-col h-full w-full gap-10">
+      <BlogFilters />
       <div
-        class="grow columns-xs gap-10 space-y-10 w-full h-full overflow-x-auto"
+        class="grow columns-xs pb-5 gap-14 space-y-10 w-full h-full overflow-x-auto"
       >
         {
           blogPosts.data.map((post) => (
