added about endpoint and page details

--- a/src/components/blog/BlogPostCard.astro
+++ b/src/components/blog/BlogPostCard.astro
@@ -44,7 +44,7 @@ function formattedDate() {
       class="rounded-lg flex flex-col border-2 border-gruvbox-bg2 group-hover:border-gruvbox-blue bg-gruvbox-bg1 shadow-md overflow-hidden"
     >
       <StrapiImage
-        image={coverImage?.[0]}
+        image={coverImage}
         className="h-40 aspect-video"
         size="small"
       />
