--- a/src/components/page/PageHeader.astro
+++ b/src/components/page/PageHeader.astro
@@ -4,9 +4,9 @@ import Menu from '../preact/Menu.tsx';
 import ThemeToggle from '../preact/ThemeToggle';
 ---
 
-<header class="fixed top-11 left-11 right-11 h-14 px-2 pt-2 flex justify-between z-10">
+<header class="fixed top-0 left-0 right-0 h-14 px-8 pt-6 flex justify-between z-10">
   <div>
-    <AnimatedLogo client:only="preact" className="pl-2 text-base" />
+    <AnimatedLogo client:only="preact" className="pl-2 text-lg" />
   </div>
   <div class="pr-2">
     <Menu client:only="preact" />
